--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,6 @@
-<!DOCTYEP html>
-<html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    </head>
-    <title>{{ page.title }}</title>
-
-    <body>
-        {{ content }}
-    </body>
-</html>
+---
+theme :
+  name : twitter
+---
+{% include JB/setup %}
+{% include themes/twitter/default.html %}
